--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,8 +1,16 @@
+# Project specific config:
 site_name: GOV.UK Frontend Django
 site_url: https://uktrade.github.io/govuk-frontend-django/
+repo_name: uktrade/govuk-frontend-django
 repo_url: https://github.com/uktrade/govuk-frontend-django/
 site_description: Documentation for the GOV.UK Frontend Django package
-docs_dir: .
+
+extra:
+  social:
+    - icon: fontawesome/brands/github
+      link: https://github.com/uktrade/govuk-frontend-django/
+
+# Standard config:
 plugins:
   - awesome-pages
   - material/social:
@@ -22,22 +30,19 @@ theme:
   name: tech_docs_template
   language: en
   features:
-    - navigation.instant
-    - navigation.tracking
-    - navigation.tabs
-    - navigation.indexes
-    - navigation.top
+    - content.code.copy
     - header.autohide
-    - search.suggest
+    - navigation.indexes
+    - navigation.instant
+    - navigation.tabs
+    - navigation.tabs.sticky
+    - navigation.top
+    - navigation.tracking
     - search.highlight
     - search.share
-  logo: logos/moj.png
-  favicon: favicons/moj.ico
-
-extra:
-  social:
-    - icon: fontawesome/brands/github
-      link: https://github.com/uktrade/govuk-frontend-django/
+    - search.suggest
+  logo: assets/dit-logo.png
+  favicon: assets/dit-favicon.png
 
 extra_javascript:
   - https://unpkg.com/tablesort@5.3.0/dist/tablesort.min.js # /PS-IGNORE
