--- a/.github/workflows/updates.yml
+++ b/.github/workflows/updates.yml
@@ -14,10 +14,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-
       - uses: actions/setup-python@v2
         with:
           python-version: 3.x
+      - name: Install Poetry
+        run: |
+          pip install -U pip
+          pip install poetry
+          poetry install
+        env:
+          POETRY_VIRTUALENVS_CREATE: false
 
       # Create a new branch with the name "updates_YYYY_MM_DD"
       - name: Create new branch
