--- a/.github/workflows/updates.yml
+++ b/.github/workflows/updates.yml
@@ -21,7 +21,7 @@ jobs:
         run: |
           pip install -U pip
           pip install poetry
-          poetry install
+          poetry install --without docs,dev
         env:
           POETRY_VIRTUALENVS_CREATE: false
 
