--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -15,7 +15,6 @@ jobs:
         run: |
           pip install -U pip
           pip install poetry
+          poetry config virtualenvs.create false
           poetry install --with docs
-        env:
-          POETRY_VIRTUALENVS_CREATE: false
       - run: poetry run mkdocs gh-deploy --force
