--- a/.github/workflows/updates.yml
+++ b/.github/workflows/updates.yml
@@ -30,6 +30,8 @@ jobs:
       # - run: echo GOVUK_FRONTEND_DJANGO_BRANCH_NAME=updates__$(echo ${{ env.GOVUK_FRONTEND_VERSION }} | sed 's/\./_/g')__$(echo ${{ env.GOVUK_FRONTEND_JINJA_VERSION }} | sed 's/\./_/g') >> $GITHUB_ENV
 
       - run: env | grep GOVUK
+      - run: make get-latest-release-tag REPO=alphagov/govuk-frontend
+      - run: echo $(make get-latest-release-tag REPO=alphagov/govuk-frontend)
       - run: echo GOVUK_FRONTEND_VERSION=$(make get-latest-release-tag REPO=alphagov/govuk-frontend)
 
       # - name: Git fetch all
