--- a/.github/workflows/updates.yml
+++ b/.github/workflows/updates.yml
@@ -11,6 +11,8 @@ on:
 
 jobs:
   deploy:
+    env:
+      GH_TOKEN: ${{ github.token }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
