--- a/.github/workflows/updates.yml
+++ b/.github/workflows/updates.yml
@@ -1,13 +1,9 @@
 name: Auto updates
 
+# Run every 3 hours
 on:
-  push:
-    branches:
-      - "*"
-
-# on:
-#   schedule:
-#     - cron: "*/5 * * * *"
+  schedule:
+    - cron: "0 */3 * * *"
 
 jobs:
   deploy:
