Add condition to skip instead of error

--- a/.github/workflows/updates.yml
+++ b/.github/workflows/updates.yml
@@ -1,14 +1,20 @@
 name: Auto updates
 
-# Run every 3 hours
+# # Run every 3 hours
+# on:
+#   schedule:
+#     - cron: "0 */3 * * *"
+
 on:
-  schedule:
-    - cron: "0 */3 * * *"
+  push:
+    branches:
+      - "*"
 
 jobs:
   deploy:
     env:
       GH_TOKEN: ${{ github.token }}
+      # GITHUB_TOKEN: ${{ github.token }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -35,7 +41,7 @@ jobs:
         run: |
           if git ls-remote --heads origin ${{ env.GOVUK_FRONTEND_DJANGO_BRANCH_NAME }} | grep -q ${{ env.GOVUK_FRONTEND_DJANGO_BRANCH_NAME }}; then
             echo "Branch origin/${{ env.GOVUK_FRONTEND_DJANGO_BRANCH_NAME }} already exists"
-            exit 78
+            echo GOVUK_FRONTEND_DJANGO_SKIP_GENERATION=True >> $GITHUB_ENV
           fi
 
       # If there was a PR opened already, exit
@@ -43,18 +49,21 @@ jobs:
         run: |
           if gh pr list --state all --base main --head ${{ env.GOVUK_FRONTEND_DJANGO_BRANCH_NAME }} | grep -q ${{ env.GOVUK_FRONTEND_DJANGO_BRANCH_NAME }}; then
             echo "PR for ${{ env.GOVUK_FRONTEND_DJANGO_BRANCH_NAME }} already exists"
-            exit 78
+            echo GOVUK_FRONTEND_DJANGO_SKIP_GENERATION=True >> $GITHUB_ENV
           fi
 
       # Create a new branch with the GOVUK_FRONTEND_DJANGO_BRANCH_NAME
       - name: Create new branch
+        if: ${{ env.GOVUK_FRONTEND_DJANGO_SKIP_GENERATION }} != "True"
         run: git checkout -b ${{ env.GOVUK_FRONTEND_DJANGO_BRANCH_NAME }}
 
       - name: Upgrade components
+        if: ${{ env.GOVUK_FRONTEND_DJANGO_SKIP_GENERATION }} != "True"
         run: make upgrade-components GOVUK_FRONTEND_VERSION=${{ env.GOVUK_FRONTEND_VERSION }} GOVUK_FRONTEND_JINJA_VERSION=${{ env.GOVUK_FRONTEND_JINJA_VERSION }}
 
       # If there were no changes, quit the job
       - name: Check for changes
+        if: ${{ env.GOVUK_FRONTEND_DJANGO_SKIP_GENERATION }} != "True"
         run: |
           if [[ -z $(git status --porcelain) ]]; then
             echo "No changes to commit"
@@ -62,6 +71,7 @@ jobs:
           fi
 
       - name: Commit changes
+        if: ${{ env.GOVUK_FRONTEND_DJANGO_SKIP_GENERATION }} != "True"
         run: |
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git config --global user.name "github-actions[bot]"
@@ -70,6 +80,5 @@ jobs:
           git push --set-upstream origin ${{ env.GOVUK_FRONTEND_DJANGO_BRANCH_NAME }}
 
       - name: Create pull request
+        if: ${{ env.GOVUK_FRONTEND_DJANGO_SKIP_GENERATION }} != "True"
         run: gh pr create -B main -H ${{ env.GOVUK_FRONTEND_DJANGO_BRANCH_NAME }} --title 'Updates for GOV.UK Frontend ${{ env.GOVUK_FRONTEND_VERSION }} and GOV.UK Frontend Jinja ${{ env.GOVUK_FRONTEND_JINJA_VERSION }}' --body 'Created by Github action'
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
