--- a/example_project/pyproject.toml
+++ b/example_project/pyproject.toml
@@ -16,3 +16,10 @@ govuk-frontend-jinja = "^2.5.0"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.djlint]
+profile="django"
+indent="4"
+ignore="H021,H006"
+exclude="node_modules,staticfiles,static"
+custom_blocks="gds_accordion,gds_accordion_item,gds_breadcrumbs,gds_checkboxes,gds_checkbox_conditional,gds_cookie_banner,gds_cookie_banner_message,gds_error_summary,gds_error_summary_error_list_item,gds_footer,gds_footer_nav,gds_footer_meta,gds_header"
