--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ python = "^3.8"
 Django = "^4.1.7"
 jinja2 = "^3.1.2"
 govuk-frontend-jinja = "2.6.0"
+json5 = "^0.9.14"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.3.0"
