Update Django 4.2.1, requests 2.31.0, pymdown-extensions 10.0

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ packages = [
 
 [tool.poetry.dependencies]
 python = "^3.8"
-Django = "^4.1.7"
+Django = "^4.2.1"
 jinja2 = "^3.1.2"
 govuk-frontend-jinja = "2.5.0"
 
@@ -44,6 +44,8 @@ pillow = "^9.5.0"
 cairosvg = "^2.7.0"
 mkdocs-tech-docs-template = "^0.0.25"
 mkdocs-awesome-pages-plugin = "^2.8.0"
+pymdown-extensions = "^10.0"
+requests = "^2.31.0"
 
 [tool.isort]
 profile = "black"
