--- a/example_project/package.json
+++ b/example_project/package.json
@@ -1,10 +1,10 @@
 {
-  "dependencies": {
-    "govuk-frontend": "4.6.0",
-    "node-sass": "^8.0.0"
-  },
-  "scripts": {
-    "build": "node-sass --include-path node_modules --output-style compressed --source-map true --source-map-contents true static/css/styles.scss static/css/styles.css",
-    "watch": "node-sass --include-path node_modules --output-style compressed --source-map true --source-map-contents true static/css/styles.scss static/css/styles.css --watch"
-  }
+    "dependencies": {
+        "govuk-frontend": "4.6.0",
+        "sass": "^1.63.6"
+    },
+    "scripts": {
+        "build": "sass --load-path=./ --quiet-deps --style=compressed static/css/styles.scss static/css/styles.css",
+        "watch": "sass --load-path=./ --quiet-deps --style=compressed static/css/styles.scss static/css/styles.css --watch"
+    }
 }
