Update to test locally with tox

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,11 @@
 [tox]
 envlist =
-    dj{32,40,41,latest}
+    py{38,39,310,311}-dj{32}
+    py{38,39,310}-dj{40}
+    py{38,39,310,311}-dj{41}
+    py{38,39,310,311,312}-dj{42}
+    py{310,311,312}-dj{50,latest}
+skip_missing_interpreters = True
 
 [testenv]
 deps=
@@ -10,6 +15,8 @@ deps=
     dj32: Django>=3.2,<3.3
     dj40: Django>=4.0,<4.1
     dj41: Django>=4.1,<4.2
+    dj42: Django>=4.2,<5.0
+    dj50: Django>=5.0,<5.1
     djlatest: Django
 
 commands=
