Update makefile command

--- a/example_project/Makefile
+++ b/example_project/Makefile
@@ -3,7 +3,7 @@ SHELL := /bin/bash
 manage = poetry run python manage.py
 
 build:
-	poetry install
+	poetry install --with dev --with docs --with testing
 
 init:
 	$(manage) loaddata example/fixtures/test_users.json
