--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ optional = true
 
 [tool.poetry.group.testing.dependencies]
 tox = "^4.11.4"
+pytest = "^7.4.3"
 
 [tool.poetry.group.dev]
 optional = true
