--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -16,10 +16,10 @@ extra:
 plugins:
   - awesome-pages
   - material/social:
-      cards_color:
-        fill: "#ffffff"
-        text: "#000000"
-      cards_font: "Roboto"
+      cards_layout_options:
+        background_color: "#ffffff"
+        color: "#000000"
+        font_family: "Roboto"
   - material/search:
       lang: en
   - mkdocstrings:
