--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,7 +50,7 @@ djlint = "^1.28.0"
 optional = true
 
 [tool.poetry.group.docs.dependencies]
-mkdocs-material = "^9.1.5"
+mkdocs-material = "~9.1.0"
 mkdocs-minify-plugin = "^0.6.4"
 mkdocs-redirects = "^1.2.0"
 mkdocstrings-python = "^0.9.0"
