--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,12 +39,13 @@ optional = true
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.3.0"
-pyyaml = "^6.0"
 isort = "^5.12.0"
 autoflake = "^2.0.2"
 mypy = "^1.2.0"
 django-stubs = "^1.16.0"
 djlint = "^1.28.0"
+pyyaml = "^6.0"
+requests = "^2.31"
 
 [tool.poetry.group.docs]
 optional = true
