--- a/example_project/pyproject.toml
+++ b/example_project/pyproject.toml
@@ -11,7 +11,11 @@ Django = "^4.2.10"
 govuk-frontend-django = { path = "../", develop = true }
 govuk-frontend-jinja = "^2.5.0"
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
+
+[tool.poetry.group.docs.dependencies]
+
+[tool.poetry.group.testing.dependencies]
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
