--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -3,6 +3,8 @@ on:
   push:
     branches:
       - main
+      # TODO: remove this before merging
+      - fix-documentation
 jobs:
   deploy:
     runs-on: ubuntu-latest
