Fix the documentation (#60)

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -29,7 +29,7 @@ plugins:
             docstring_style: google
 
 theme:
-  name: tech_docs_template
+  name: material
   language: en
   features:
     - content.code.copy
