Relax the Django/Python dependencies and add testing

--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,8 @@ envlist =
     py{38,39,310}-dj{40}
     py{38,39,310,311}-dj{41}
     py{38,39,310,311,312}-dj{42}
-    py{310,311,312}-dj{50,latest}
+    py{310,311,312}-dj{50}
+    py{310,311,312,313}-dj{51, latest}
 skip_missing_interpreters = True
 
 [testenv]
@@ -17,6 +18,7 @@ deps=
     dj41: Django>=4.1,<4.2
     dj42: Django>=4.2,<5.0
     dj50: Django>=5.0,<5.1
+    dj51: Django>=5.1,<5.2
     djlatest: Django
 
 commands=
