--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,8 +22,8 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.8"
-Django = "^4.1.9"
+python = ">=3.8,<4.0"
+Django = ">=4.1.9, <5.2"
 jinja2 = "^3.1.2"
 govuk-frontend-jinja = "3.1.0"
 
